# anvil

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  README.md  docker-compose.yml  mkdocs.yml
.github/workflows/: ci.yml  docs.yml  release.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260422_0001_initial_schema.py  20260422_0002_users_and_rbac.py  20260422_0003_app_settings.py  20260423_0004_share_slugs.py  20260423_0005_tune_receipts.py  20260423_0006_physical_location.py  20260427_0007_schedules.py
backend/anvil/: __init__.py  auth.py  config.py  db.py  logging.py  main.py  models.py  orchestrator.py  pubsub.py  reports.py  saml_sp.py  schemas.py  shares.py  sso.py
backend/anvil/api/: __init__.py  auth.py  comparisons.py  dashboard.py  devices.py  environment.py  models.py  public.py  runs.py  schedules.py  ws.py
backend/anvil/discovery/: __init__.py
backend/anvil/profiles/: __init__.py  snia.py
backend/anvil/runner/: __init__.py
backend/tests/: conftest.py  test_api_integration.py  test_compare_route_order.py  test_discovery_fingerprint.py  test_env_tune_allowlist.py  test_env_tune_per_key_transaction.py  test_fio_helpers.py  test_minor_hardening.py  test_physical_location.py  test_profiles.py  test_rbac_e2e.py  test_reconcile.py  test_report_xss.py  test_runner_terminal_event.py  test_shares.py  test_snia_steady_state.py  test_sso_endpoints.py  test_versions.py
docs/: DESIGN.md  index.md
docs/getting-started/: first-run.md  install.md
docs/operator-guide/: env-tune.md  rbac.md  recovery.md  security.md  sso.md
docs/reference/: api.md
docs/user-guide/: compare.md  profiles.md  reports.md  running.md  sharing.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  global.d.ts  index.css  main.tsx
runner/: Dockerfile  pyproject.toml
runner/anvil_runner/: __init__.py  devices.py  discovery.py  env.py  env_tune.py  fio.py  main.py  pcie.py  server.py
scripts/: backup.sh  bootstrap-host.sh  dev-api.sh  restore.sh
(+29 files in other folders)
